aligned the nav text correctly and added the header background

--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -1,7 +1,20 @@
+.headerBackground{
+  height: 75px;
+  width: 100vw;
+  background-color: #d5dce2;
+  border-bottom: 3px solid #2c506d;
+  position: absolute;
+  top: 0;
+  z-index: -10;
+
+}
+
 .header {
   display: grid;
+  max-width: 1100px;
   grid-template-columns: 150px auto;
   grid-template-rows: 75px 75px;
+  margin: 0 auto;
 }
 
 .topNavBar {
@@ -22,6 +35,7 @@
   display: flex;
   column-gap: 20px;
   padding: 0;
+  padding-bottom: 3px;
   margin: 0;
   list-style: none;
   color: #2c506d;
